SmartNews_unpackaged/objects/News_Source__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>business</fullName>
                </value>
                <value>
                    <fullName>entertainment</fullName>
                </value>
                <value>
                    <fullName>general</fullName>
                </value>
                <value>
                    <fullName>health</fullName>
                </value>
                <value>
                    <fullName>science</fullName>
                </value>
                <value>
                    <fullName>sports</fullName>
                </value>
                <value>
                    <fullName>technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ar</fullName>
                </value>
                <value>
                    <fullName>au</fullName>
                </value>
                <value>
                    <fullName>br</fullName>
                </value>
                <value>
                    <fullName>ca</fullName>
                </value>
                <value>
                    <fullName>de</fullName>
                </value>
                <value>
                    <fullName>es</fullName>
                </value>
                <value>
                    <fullName>fr</fullName>
                </value>
                <value>
                    <fullName>gb</fullName>
                </value>
                <value>
                    <fullName>ie</fullName>
                </value>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>is</fullName>
                </value>
                <value>
                    <fullName>it</fullName>
                </value>
                <value>
                    <fullName>nl</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
                <value>
                    <fullName>pk</fullName>
                </value>
                <value>
                    <fullName>ru</fullName>
                </value>
                <value>
                    <fullName>sa</fullName>
                </value>
                <value>
                    <fullName>se</fullName>
                </value>
                <value>
                    <fullName>us</fullName>
                </value>
                <value>
                    <fullName>za</fullName>
                </value>
                <value>
                    <fullName>zh</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ar</fullName>
                </value>
                <value>
                    <fullName>de</fullName>
                </value>
                <value>
                    <fullName>en</fullName>
                </value>
                <value>
                    <fullName>es</fullName>
                </value>
                <value>
                    <fullName>fr</fullName>
                </value>
                <value>
                    <fullName>he</fullName>
                </value>
                <value>
                    <fullName>it</fullName>
                </value>
                <value>
                    <fullName>nl</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
                <value>
                    <fullName>pt</fullName>
                </value>
                <value>
                    <fullName>ru</fullName>
                </value>
                <value>
                    <fullName>se</fullName>
                </value>
                <value>
                    <fullName>ud</fullName>
                </value>
                <value>
                    <fullName>zh</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABC News</fullName>
                </value>
                <value>
                    <fullName>ABC News (AU)</fullName>
                </value>
                <value>
                    <fullName>ANSA.it</fullName>
                </value>
                <value>
                    <fullName>Aftenposten</fullName>
                </value>
                <value>
                    <fullName>Al Jazeera English</fullName>
                </value>
                <value>
                    <fullName>Argaam</fullName>
                </value>
                <value>
                    <fullName>Ars Technica</fullName>
                </value>
                <value>
                    <fullName>Ary News</fullName>
                </value>
                <value>
                    <fullName>Associated Press</fullName>
                </value>
                <value>
                    <fullName>Australian Financial Review</fullName>
                </value>
                <value>
                    <fullName>Axios</fullName>
                </value>
                <value>
                    <fullName>BBC News</fullName>
                </value>
                <value>
                    <fullName>BBC Sport</fullName>
                </value>
                <value>
                    <fullName>Bild</fullName>
                </value>
                <value>
                    <fullName>Blasting News (BR)</fullName>
                </value>
                <value>
                    <fullName>Bleacher Report</fullName>
                </value>
                <value>
                    <fullName>Bloomberg</fullName>
                </value>
                <value>
                    <fullName>Breitbart News</fullName>
                </value>
                <value>
                    <fullName>Business Insider</fullName>
                </value>
                <value>
                    <fullName>Business Insider (UK)</fullName>
                </value>
                <value>
                    <fullName>Buzzfeed</fullName>
                </value>
                <value>
                    <fullName>CBC News</fullName>
                </value>
                <value>
                    <fullName>CBS News</fullName>
                </value>
                <value>
                    <fullName>CNBC</fullName>
                </value>
                <value>
                    <fullName>CNN</fullName>
                </value>
                <value>
                    <fullName>CNN Spanish</fullName>
                </value>
                <value>
                    <fullName>Crypto Coins News</fullName>
                </value>
                <value>
                    <fullName>Daily Mail</fullName>
                </value>
                <value>
                    <fullName>Der Tagesspiegel</fullName>
                </value>
                <value>
                    <fullName>Die Zeit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>News_Source</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ID__c</columns>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Country__c</columns>
        <columns>Description__c</columns>
        <columns>URL__c</columns>
        <columns>Language__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>News_Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>